[package]
name = "ai"
version = "0.1.0"
authors = ["Finn Bear <finnbearlabs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate"
path = "src/generate.rs"

[[bin]]
name = "style"
path = "src/style.rs"

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rand = "0.8.4"
palette = "0.6.0"
serde = {version = "1.0.127", features = ["derive"]}
serde_yaml = "0.8.17"
num = "0.4.0"
raster = "0.2.0"
crossbeam = "0.8.1"
